[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scripts/DialogBox.gd" type="Script" id=1]
[ext_resource path="res://Level/Menu/HUD.tscn" type="PackedScene" id=2]
[ext_resource path="res://Level/Menu/PauseMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://Level/Object/Dialog.tscn" type="PackedScene" id=4]
[ext_resource path="res://Level/Menu/controller.tscn" type="PackedScene" id=5]
[ext_resource path="res://Level/Menu/StartRun.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scence/Player.tscn" type="PackedScene" id=7]
[ext_resource path="res://Level/Menu/GameOver.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scence/src/weather.tscn" type="PackedScene" id=9]
[ext_resource path="res://Level/Parallax/Ad.tscn" type="PackedScene" id=10]
[ext_resource path="res://tile/ad.tscn" type="PackedScene" id=11]
[ext_resource path="res://Level/Menu/Transition_out.tscn" type="PackedScene" id=12]
[ext_resource path="res://tile/decoration.tscn" type="PackedScene" id=13]
[ext_resource path="res://Level/Menu/Win.tscn" type="PackedScene" id=14]
[ext_resource path="res://Scripts/Level.gd" type="Script" id=15]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 26 )

[node name="Level32" type="Node2D"]
script = ExtResource( 15 )

[node name="HUD" parent="." instance=ExtResource( 2 )]
max_amount = 25

[node name="controller" parent="HUD" instance=ExtResource( 5 )]

[node name="GameOver" parent="HUD" instance=ExtResource( 8 )]
visible = false

[node name="Win" parent="HUD" instance=ExtResource( 14 )]
visible = false
world_scene = "res://Level/Menu/MeinMenu.tscn"

[node name="StartRun" parent="HUD" instance=ExtResource( 6 )]
pause_mode = 2
visible = false

[node name="PauseMenu" parent="HUD" instance=ExtResource( 3 )]
visible = false

[node name="Transition_out" parent="." instance=ExtResource( 12 )]

[node name="Ad" parent="." instance=ExtResource( 10 )]

[node name="ad" parent="." instance=ExtResource( 11 )]
position = Vector2( 1, 0 )

[node name="Decoration" parent="." instance=ExtResource( 13 )]
tile_data = PoolIntArray(  )

[node name="Weather" parent="." instance=ExtResource( 9 )]
position = Vector2( 98, -112 )
weatherType = "rain"
wind = 0.1
amount = 10000

[node name="Player" parent="." instance=ExtResource( 7 )]
position = Vector2( 35, 183 )

[node name="object" type="Node2D" parent="."]

[node name="DialogBox" type="Area2D" parent="object"]
position = Vector2( 2916, -24 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="object/DialogBox"]
position = Vector2( 0, -4 )
shape = SubResource( 1 )

[node name="enemy" type="Node2D" parent="."]

[node name="Dialog" parent="." instance=ExtResource( 4 )]
messeng = "DIALOG32"
